--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -1,28 +1,46 @@
-.header{
+.header {
     text-align: center;
     margin: 50px 0;
     font-weight: bold;
 }
 
-.title{
+.title {
     margin-top: 20px;
 }
 
-.container{
+.container {
     background: #fff;
     padding: 30px;
     min-height: 400px;
-    width:1080px; 
-    margin:0 auto;
-    margin-bottom:50px;
+    width: 1080px;
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
 
-.img{
+.img {
     width: 100%;
-    margin: 20px 0; 
+    margin: 20px 0;
 }
 
 .invalid-error {
     font-size: 0.75em;
     color: #dc3545;
 }
+
+.container-fixed-footer {
+    min-height: calc(100vh - 132px);
+}
+
+.footer-container {
+    width: 100%;
+    height: 50px;
+    padding: 1rem;
+    background-color: #212529;
+    color:white;
+    position: fixed;
+    bottom: 0
+  }
+  
+  .text-red {
+    color: #e80000;
+  }
